tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Polymeriser-AAAAAAAAAAAAAAAAAAAIMg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2098,
  "prerequisites": [
    2097
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Serums and sequences can be placed in a Polymeriser to increase their strength and amount of DNA held within. Serums need to be polymerised at least once before being used in the inoculator. To polymerise, both Raw DNA and Polymerising Bacteria are required. Raw DNA is obtained from the Genepool, and Polymerising Bacteria is made from incubating bacteria with bone meal. Gold nuggets can be used as a catalyst to speed up the process.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Polymeriser",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2097
  ],
  "rewards": [],
  "tasks": []
}
