tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__ProductionFrames-AAAAAAAAAAAAAAAAAAAEWg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1114,
  "prerequisites": [
    1113
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can make proven frames or purchase them from a villager. If you can't find a beekeeper, there are a couple of different options to get one. Rescue a zombie villager, add doors to a village to get them to make kids, or perhaps use a cupid's bow and arrow...\n\nAbout magic frames:\nThey're the core of magically endowed frames. They also have a special ability - no maximum production chance. Normal frames are ineffective to get above 16x production (4 frames) but with magic frames you can keep going - just watch out, above 16x you'll be working your bees so hard they have a chance to degenerate into ignoble ones. This can happen any bee tick, not just when they die. Frames to lower genetic decay will lower the chances of this happening.\n\nOf course, with very long lifespans, high production genes, swarmers, and tons of frames, you may think this is worth it.\n\nNote that normal products have a cap of 200% produced, and specialties 100%.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Production Frames",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1113
  ],
  "rewards": [],
  "tasks": []
}
