tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__PuttheDronesinaJ-AAAAAAAAAAAAAAAAAAAF6A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1512,
  "prerequisites": [
    504
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Once you get good effects from your bees, instead of just trashing the excess drones, you can put them in collector's jars to get the effects anywhere in your base.\n\nHealing? XP? Poison?\n\nThe collector's jars can even be piped or connected to a conveyor so that drones last a long time.\n\n[note]PS: Using the regen effect of Imperial bees while doing Blood Magic may be useful.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Put the Drones in a Jar and Shake it Up",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    504
  ],
  "rewards": [],
  "tasks": []
}
