tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Registry-AAAAAAAAAAAAAAAAAAAINg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2102,
  "prerequisites": [
    2105,
    2107,
    2108,
    2109
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Registry combines the existing four databases into a new sleek browser to allow the properties, mutations and genes of all discovered bees, trees, butterflies and flowers.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Registry",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2105,
    2107,
    2108,
    2109
  ],
  "rewards": [],
  "tasks": []
}
