tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Sequencer-AAAAAAAAAAAAAAAAAAAIMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2097,
  "prerequisites": [
    2096
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After obtaining a DNA Sequence with the gene that you wish, it must be placed in the Sequencer. This uses Fluorescent Dye to determine the correct sequence, and when completed logs the discovery. The important thing here is that the discovery goes to the person who placed the machine.\n\nGenes are sequenced faster if the sequence has been placed in a Polymeriser first to increase the strength.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sequencer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2096
  ],
  "rewards": [],
  "tasks": []
}
