tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__SilkyCombsandPro-AAAAAAAAAAAAAAAAAAAD4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 993,
  "prerequisites": [
    992,
    539
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Collect silky combs and extract some silk wisp out of it in order to make some Apiarist's clothes.\n\nThis can take a very long time, so parallelize!\n\nUse a GregTech or Forestry Centrifuge to get Silky Propoli. For higher tier (and useful) combs you need a GT centrifuge.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Silky Combs and Propoli",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    992,
    539
  ],
  "rewards": [],
  "tasks": []
}
