tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Splicer-A462Q2yHRleMxFZCeNzhuA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7820296619455996344,
  "prerequisites": [
    2097
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Splicer is much like the Inoculator in function, however it has the benefit of not requiring any liquid. \n\nThe Splicer will take a Genome Template from the Sequencer and will 'Splice' in the DNA, allowing you to change a bee's genetics.\n\nThe primary drawback of using this compared to the Inoculator is the increased expense of the block, and the significant power cost in comparison.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Splicer",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2097
  ],
  "rewards": [],
  "tasks": []
}
