tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__ToScanorNottoSca-AAAAAAAAAAAAAAAAAAAB-A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 504,
  "prerequisites": [
    502
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to get into bee breeding, you need a way to see all the traits, active and inactive. You only want to breed so called \"pure\" bees; For those, both \"Active\" and \"Inactive\" traits are identical.\n\n[note]BTW, it's not like the more 'advanced' versions are actually better, just that they have more functions. Use the one you like.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "To Scan or Not to Scan",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    502
  ],
  "rewards": [],
  "tasks": []
}
